# duplicate-file-finder

./: .gitignore  Cargo.toml  README.md  duplicates.txt
.github/workflows/: release.yml
src/: lib.rs  main.rs
tests/: integration_tests.rs
